# openapi2jsonschema

./: pyproject.toml  setup.py
openapi2jsonschema/: command.py  test_command.py  util.py
